<resources>
    <string name="app_name">Travity</string>

    <string name="error_empty_field">Please fill all required fields.</string>
    <string name="error_password_invalid">Please enter a valid password.</string>
    <string name="error_no_user_data">User data does not exist.</string>
    <string name="error_no_user_account">User account does not exist.</string>
    <string name="error_email_invalid">Please enter a valid email address.</string>
    <string name="error_password_invalid_case">Please enter a valid password. (6~24 letters, 0–9 + A-z)</string>
    <string name="error_password_different">Please enter same password in both fields.</string>

    <string name="splash_phrase">준비부터 이륙까지 편리하게</string>
    <string name="splash_copyright">© 2020. Team Travity. all rights reserved.</string>

    <string name="welcome_title">Travity에 오신 것을 환영합니다!</string>
    <string name="welcome_text">Travity는 여행 준비부터 공항까지,
        \n여러분의 편안한 비행을 안내하는 앱입니다.</string>
    <string name="welcome_start">시작하기</string>

    <string name="on_board_1_title">잠깐,</string>
    <string name="on_board_1_sub">잊은 건 없을까?</string>
    <string name="on_board_1_text">Travity로 여행 준비물을 준비해보세요.
        \n체크리스트부터 푸시 알림 기능까지 지원합니다.</string>

    <string name="on_board_2_title">공항,</string>
    <string name="on_board_2_sub">언제 도착하지?</string>
    <string name="on_board_2_text">Travity로 체크인 카운터, 터미널에
        \n언제 도착해야 하는지 알아보세요!</string>

    <string name="on_board_3_title">소중한 내차,</string>
    <string name="on_board_3_sub">어디에 주차할까?</string>
    <string name="on_board_3_text">Travity로 원활한 주차 구역을 찾아보세요!
        \n야외 주차장부터 층별 차량 대수까지
        \n편리하게 확인할 수 있습니다.
        \n주차한 위치도 메모해보세요.</string>

    <string name="on_board_4_title">복잡한 공항,</string>
    <string name="on_board_4_sub">여기가 어디지?</string>
    <string name="on_board_4_text">Travity는 공항 도착부터 이륙까지 단계 별로 안내합니다.
        \n식당, 화장실, 면세점 위치도 찾아보세요.</string>
    <string name="on_board_skip">SKIP</string>
    <string name="login_login">로그인</string>
    <string name="login_email_register">이메일로 회원가입</string>
    <string name="login_google_register">구글로 시작하기</string>
    <string name="login_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="login_email">이메일</string>
    <string name="login_pw">비밀번호</string>
    <string name="register_next">다음</string>
    <string name="register_finish">완료</string>


</resources>