<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.david0926.travity.LoginActivity" />

        <variable
            name="onProgress"
            type="Boolean" />

        <variable
            name="email"
            type="String" />

        <variable
            name="pw"
            type="String" />
    </data>

    <ScrollView
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="107dp"
                android:layout_height="21dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/app_typo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="202dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_illustration_lighthouse"
                app:layout_constraintBottom_toTopOf="@id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_chainStyle="spread" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_regi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:background="@drawable/round_box"
                    android:backgroundTint="@color/colorGrayBright"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"
                    app:bindFocusTo="@{editLoginEmail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanskr_light"
                        android:text="@string/login_email"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edit_login_email"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/notosanskr_bold"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingVertical="4dp"
                        android:text="@={email}"
                        android:textColorHint="@color/materialGray5"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_box"
                    android:backgroundTint="@color/colorGrayBright"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp"
                    app:bindFocusTo="@{editLoginPw}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanskr_light"
                        android:text="@string/login_pw"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edit_login_pw"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/notosanskr_bold"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingVertical="4dp"
                        android:text="@={pw}"
                        android:textColorHint="@color/materialGray5"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:paddingVertical="8dp"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/colorOrange"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <TextView
                    android:id="@+id/txt_login_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/productb"
                    android:text="Error Message"
                    android:textColor="@color/materialRed"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login_signin" />

                <LinearLayout
                    android:id="@+id/btn_login_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="34dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_box"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="@{!onProgress}"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:paddingVertical="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12">

                    <ProgressBar
                        android:id="@+id/progress_login"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:indeterminateTint="@android:color/white"
                        android:visibility="@{onProgress, default=gone}" />

                    <TextView
                        android:id="@+id/txt_login_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notosanskr_bold"
                        android:text="@string/login_login"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:visibility="@{!onProgress}" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_login_regi"
                style="@style/ButtonStyleBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                android:layout_marginBottom="20dp"
                android:clickable="@{!onProgress}"
                android:elevation="0dp"
                android:paddingVertical="6dp"
                android:text="@string/login_email_register"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_login_google"
                style="@style/ButtonStyleColorless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="34dp"
                android:clickable="@{!onProgress}"
                android:paddingVertical="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:text="@string/login_google_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
